--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
 </head>
 <body>
     <h1>Welkom op de Stroomwebsite</h1>
+    <a href="https://www.waterbolk.com/index.html">Klik hier om naar mijn website te gaan te gaan</a>
+    
     <p>Dit is de website van Heleen Waterbolk.</p>
 </body>
 </html>
