--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 </head>
 <body>
     <div id="mijn-nieuwe-foto">
-    <img src="AA1101.gif" alt="Waterbolk Project" style="width:100%;">
+    <img src="AA1101_128a.gif" alt="Waterbolk Project" style="width:100%;">
 </div>
     <h1>Welkom op de Stroomwebsite</h1>
     <a href="https://www.waterbolk.com/index.html">Klik hier om naar mijn website te gaan te gaan</a>
