--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     
     <p>Dit is de website van Heleen Waterbolk.</p>
     <div id="Hoepel">
-    <img src="hoepel.jpg" alt="Waterbolk Project" style="width:100%;">
+    <img src="images/hoepel.jpg" alt="Waterbolk Project" style="width:100%;">
 </div>
 </body>
 </html>
