--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
             <li><a href="beweging/index.html">BEWEGING</a></li>
             <li><a href="zwerftocht/index.html">ZWERFTOCHT</a></li>
             <li><a href="mengsel/index.html">MENGSEL</a></li>
+              <li><a href="mengsel/index.html">waarneming</a></li>
         </ul>
     </nav>
 
