Update navigation links to point to correct HTML files

--- a/index.html
+++ b/index.html
@@ -36,11 +36,11 @@
 
     <nav>
         <ul>
-            <li><a href="theorie/index.html">THEORIE</a></li>
-            <li><a href="beweging/index.html">BEWEGING</a></li>
-            <li><a href="zwerftocht/index.html">ZWERFTOCHT</a></li>
-            <li><a href="mengsel/index.html">MENGSEL</a></li>
-              <li><a href="mengsel/index.html">waarneming</a></li>
+            <li><a href="theorie/theorie.html">THEORIE</a></li>
+            <li><a href="beweging/beweging.html">BEWEGING</a></li>
+            <li><a href="zwerftocht/zwerftocht.html">ZWERFTOCHT</a></li>
+            <li><a href="mengsel/mengsel.html">MENGSEL</a></li>
+              <li><a href="waarneming/waarneming.html">WAARNEMING</a></li>
         </ul>
     </nav>
 
