Update project title and navigation styles

--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mijn Project</title>
+    <title>Heleen Waterbolk</title>
     <style>
         /* Een beetje basisstyling om het er direct goed uit te laten zien */
         nav {
-            background-color: #333;
+            background-color: #555;
             padding: 10px;
         }
         nav ul {
@@ -31,7 +31,7 @@
 <body>
 
     <header>
-        <h1>Mijn Project Titel</h1>
+        <h1>Heleen Waterbolk</h1>
     </header>
 
     <nav>
@@ -43,10 +43,5 @@
               <li><a href="waarneming/waarneming.html">WAARNEMING</a></li>
         </ul>
     </nav>
-
-    <main>
-        <p>Welkom op de hoofdpagina.</p>
-    </main>
-
 </body>
 </html>
