Create index.html with basic layout and styles
Added basic HTML structure and styling for the page.

--- a/index.html
+++ b/index.html
@@ -1,1 +1,76 @@
 
+<!DOCTYPE html>
+<html lang="nl">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Heleen Waterbolk</title>
+    <style>
+        /* Een beetje basisstyling om het er direct goed uit te laten zien */
+        nav {
+            background-color: #333;
+            padding: 10px;
+        }
+        nav ul {
+            list-style-type: none;
+            margin: 0;
+            padding: 0;
+            display: flex;
+            gap: 20px;
+        }
+        nav a {
+            color: white;
+            text-decoration: none;
+            font-weight: bold;
+        }
+        nav a:hover {
+            text-decoration: underline;
+        }
+
+      <style>
+        body {
+            /* De afbeelding laden */
+            background-image: url('car.jpg');
+
+            /* Zorgen dat de afbeelding het hele scherm vult */
+            background-size: cover;
+
+            /* De afbeelding centreren */
+            background-position: center;
+
+            /* Voorkomen dat de afbeelding herhaalt als de pagina lang is */
+            background-repeat: no-repeat;
+
+            /* De achtergrond op zijn plek houden tijdens het scrollen */
+            background-attachment: fixed;
+
+            /* Een zwarte reservekleur voor het geval de foto niet laadt */
+            background-color: #000;
+
+            /* Tekst leesbaar maken op een donkere achtergrond */
+            color: white;
+            font-family: sans-serif;
+            margin: 0;
+            height: 100vh;
+        }
+    </style>
+      
+    </style>
+</head>
+<body>
+
+    <header>
+        <h1>Heleen Waterbolk</h1>
+    </header>
+
+    <nav>
+        <ul>
+            <li><a href="theorie/theorie.html">THEORIE</a></li>
+            <li><a href="beweging/beweging.html">BEWEGING</a></li>
+            <li><a href="zwerftocht/zwerftocht.html">ZWERFTOCHT</a></li>
+            <li><a href="mengsel/mengsel.html">MENGSEL</a></li>
+              <li><a href="waarneming/waarneming.html">WAARNEMING</a></li>
+        </ul>
+    </nav>
+</body>
+</html>
