Update background image path in index.html

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
       <style>
         body {
             /* De afbeelding laden */
-            background-image: url('car.jpg');
+            background-image: url('../images/car.jpg');
 
             /* Zorgen dat de afbeelding het hele scherm vult */
             background-size: cover;
