Fix background image path in index.html

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         }
         body {
             /* De afbeelding laden */
-            background-image: url('../images/car.jpg');
+            background-image: url('images/car.jpg');
 
             /* Zorgen dat de afbeelding het hele scherm vult */
             background-size: cover;
