Enhance index.html with SEO meta tags
Added meta tags for SEO and social media sharing.

--- a/index.html
+++ b/index.html
@@ -1,7 +1,27 @@
-
 <!DOCTYPE html>
 <html lang="nl">
 <head>
+    <meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+
+<meta name="description" content="Verken de wereld van Waterbolk: een unieke combinatie van architectuur, beeldende kunst, figuurreeksen en de Electronic Studio. Ontdek projecten zoals Patroonherkenning, Stroomwerk en artistieke verkenningen uit New York.">
+<meta name="keywords" content="Waterbolk, Hy Waterbolk, architectuur, beeldende kunst, Electronic Studio, Patroonherkenning, Stroomwerk, kunstenaar, architect">
+<meta name="author" content="Hy Waterbolk">
+
+<meta name="robots" content="index, follow, max-image-preview:large, max-snippet:-1">
+<meta name="googlebot" content="index, follow">
+
+<meta property="og:type" content="website">
+<meta property="og:url" content="https://www.waterbolk.com/">
+<meta property="og:title" content="Waterbolk | Architectuur & Beeldende Kunst">
+<meta property="og:description" content="Een verzameling van krachten in architectuur en kunst. Bekijk de werken van Hy Waterbolk.">
+<meta property="og:image" content="https://www.waterbolk.com/afbeelding-van-je-werk.jpg"> <meta name="twitter:card" content="summary_large_image">
+<meta name="twitter:title" content="Waterbolk | Architectuur & Beeldende Kunst">
+<meta name="twitter:description" content="Artistieke projecten en architectonische vormgeving door Hy Waterbolk.">
+<meta name="twitter:image" content="https://www.waterbolk.com/afbeelding-van-je-werk.jpg">
+
+<link rel="canonical" href="https://www.waterbolk.com/">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Heleen Waterbolk</title>
