--- a/index.html
+++ b/index.html
@@ -82,6 +82,7 @@
 
     <nav>
         <ul>
+             <li><a href="about/about.html">ABOUT</a></li>
             <li><a href="theorie/theorie.html">THEORIE</a></li>
             <li><a href="beweging/beweging.html">BEWEGING</a></li>
             <li><a href="zwerftocht/zwerftocht.html">ZWERFTOCHT</a></li>
