Enhance about.html with artist bio and themes
Added detailed bio and key themes for Heleen Waterbolk.

--- a/about.html
+++ b/about.html
@@ -86,6 +86,31 @@
         <h1>Over Heleen Waterbolk</h1>
         
         <div class="profile-text">
+
+
+Hier is de tekst ingedeeld met `<p>` tags:
+
+<p>Option 2: The Detailed Bio (Best for an "About Me" page)</p>
+
+<p>About the Practice My work is a continuous exploration of sequences and "scores." Originally inspired by the mechanical movements of film and the kinetic energy of the city (from the Mickey Mouse motifs of New York to the heat vibrating off asphalt), my practice has evolved into a study of how digital data can be materialized.</p>
+
+<p>Using tools like Director and Vectorworks, I develop animations where figures move according to specific frequencies. These digital "clusters" and "durations" are then captured and transformed into physical objects—water-cut steel sculptures, inkjet-on-canvas "counter-paintings," and layered compositions.</p>
+
+<p>Key Themes:</p>
+
+<p>The Transition from Analog to Digital: Marking the shift between these two worlds through processions of form and "rebus-like" compositions.</p>
+
+<p>Visual Frequencies: Comparing sound waves with "image frequencies," where the movement of a figure on a screen is treated with the same mathematical rigor as a musical note.</p>
+
+<p>Post-Symbolism: Developing a visual alphabet where meaning is singular rather than multiple—moving from "signs" to "symbols" where materiality precedes the message.</p>
+
+<p>Layering: Using the concept of "embedding" (mise en abyme) to telescope frames within frames, creating depth through repetition and variation.</p>
+
+---
+
+Zal ik deze tekst ook voor je omzetten naar een volledige HTML-structuur met koppen (`<h2>`, `<h3>`) en lijstitems (`<li>`) voor een betere leesbaarheid op je website?
+
+            
             <p>
                 Heleen Waterbolk is een autonoom beeldend kunstenaar die zich begeeft op het snijvlak van digitale techniek, waarneming en abstracte beweging. 
             </p>
