Translate and format text in about.html
Translated text sections from English to Dutch and improved HTML structure with paragraph tags.

--- a/about.html
+++ b/about.html
@@ -88,27 +88,27 @@
         <div class="profile-text">
 
 
-Hier is de tekst ingedeeld met `<p>` tags:
+Natuurlijk! Hier is de vertaalde tekst, keurig ingedeeld in `<p>` tags:
 
-<p>Option 2: The Detailed Bio (Best for an "About Me" page)</p>
+<p>Optie 2: De gedetailleerde biografie (Beste voor een "Over mij"-pagina)</p>
 
-<p>About the Practice My work is a continuous exploration of sequences and "scores." Originally inspired by the mechanical movements of film and the kinetic energy of the city (from the Mickey Mouse motifs of New York to the heat vibrating off asphalt), my practice has evolved into a study of how digital data can be materialized.</p>
+<p>Over de praktijk: Mijn werk is een voortdurende verkenning van sequenties en "scores". Oorspronkelijk geïnspireerd door de mechanische bewegingen van film en de kinetische energie van de stad (van de Mickey Mouse-motieven in New York tot de hitte die van het asfalt trilt), is mijn praktijk geëvolueerd naar een studie over hoe digitale data gematerialiseerd kan worden.</p>
 
-<p>Using tools like Director and Vectorworks, I develop animations where figures move according to specific frequencies. These digital "clusters" and "durations" are then captured and transformed into physical objects—water-cut steel sculptures, inkjet-on-canvas "counter-paintings," and layered compositions.</p>
+<p>Met behulp van software zoals Director en Vectorworks ontwikkel ik animaties waarin figuren bewegen volgens specifieke frequenties. Deze digitale "clusters" en "duurmetingen" worden vervolgens vastgelegd en getransformeerd tot fysieke objecten: watergesneden stalen sculpturen, inkjet-op-canvas "tegen-schilderijen" en gelaagde composities.</p>
 
-<p>Key Themes:</p>
+<p>Belangrijke thema's:</p>
 
-<p>The Transition from Analog to Digital: Marking the shift between these two worlds through processions of form and "rebus-like" compositions.</p>
+<p>De overgang van analoog naar digitaal: Het markeren van de verschuiving tussen deze twee werelden via processies van vorm en "rebus-achtige" composities.</p>
 
-<p>Visual Frequencies: Comparing sound waves with "image frequencies," where the movement of a figure on a screen is treated with the same mathematical rigor as a musical note.</p>
+<p>Visuele frequenties: Het vergelijken van geluidsgolven met "beeldfrequenties", waarbij de beweging van een figuur op een scherm met dezelfde wiskundige nauwkeurigheid wordt behandeld als een muzieknoot.</p>
 
-<p>Post-Symbolism: Developing a visual alphabet where meaning is singular rather than multiple—moving from "signs" to "symbols" where materiality precedes the message.</p>
+<p>Post-symbolisme: Het ontwikkelen van een visueel alfabet waarin de betekenis enkelvoudig is in plaats van meervoudig — een beweging van "tekens" naar "symbolen" waarbij de materialiteit voorafgaat aan de boodschap.</p>
 
-<p>Layering: Using the concept of "embedding" (mise en abyme) to telescope frames within frames, creating depth through repetition and variation.</p>
+<p>Gelaagdheid: Het gebruik van het concept van "insluiting" (mise en abyme) om kaders binnen kaders te plaatsen, waardoor diepte ontstaat door herhaling en variatie.</p>
 
 ---
 
-Zal ik deze tekst ook voor je omzetten naar een volledige HTML-structuur met koppen (`<h2>`, `<h3>`) en lijstitems (`<li>`) voor een betere leesbaarheid op je website?
+Zal ik deze vertaling ook direct omzetten naar een **HTML-lijst** voor de thema's, zodat het er visueel wat strakker uitziet op je pagina?
 
             
             <p>
