--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         }
         body {
             /* De afbeelding laden */
-            background-image: url('images/europa.jpg');
+            background-image: url("images/europa.jpg");
 
             /* Zorgen dat de afbeelding het hele scherm vult */
             background-size: cover;
