Update image source in index-old.html

--- a/index-old.html
+++ b/index-old.html
@@ -37,7 +37,7 @@
     
     <p>Dit is de website van Heleen Waterbolk.</p>
     <div id="Hoepel">
-    <img src="images/hoepel.jpg" alt="Waterbolk Project" style="width:100%;">
+    <img src="images/hub1+2.jpg" alt="Waterbolk Project" style="width:100%;">
 </div>
 </body>
 </html>
