Change 'About the Practice' to 'De praktijk'
Updated the title and modified a paragraph in Dutch.

--- a/about.html
+++ b/about.html
@@ -99,9 +99,9 @@
     </nav>
 
     <div class="container">
-        <h1>About the Practice</h1>
+        <h1>De praktijk</h1>
 
-        <p>Mijn werk is een voortdurende verkenning van sequenties en "scores." Oorspronkelijk geïnspireerd door de mechanische bewegingen van film en de kinetische energie van de stad (van de Mickey Mouse-motieven van New York tot de hitte die van het asfalt trilt), is mijn praktijk geëvolueerd naar een studie over hoe digitale data gematerialiseerd kan worden.</p>
+        <p>Mijn werk is een voortdurende verkenning." Oorspronkelijk geïnspireerd door de mechanische bewegingen van film en de kinetische energie van de stad (van de Mickey Mouse-motieven van New York tot de hitte die van het asfalt trilt), is mijn praktijk geëvolueerd naar een studie over hoe digitale data gematerialiseerd kunnen worden.</p>
 
         <p>Met behulp van tools zoals Director en Vectorworks ontwikkel ik animaties waarin figuren bewegen volgens specifieke frequenties. Deze digitale "clusters" en "duurmetingen" worden vervolgens vastgelegd en getransformeerd tot fysieke objecten—watergesneden stalen sculpturen, inkjet-op-canvas "tegen-schilderijen" en gelaagde composities.</p>
 
