Update text in index.html for clarity

--- a/index.html
+++ b/index.html
@@ -103,12 +103,12 @@
             
             <div class="text-box">
                 <h2>Over de praktijk</h2>
-                <p>Mijn werk is een voortdurende verkenning van sequenties en "scores". Geïnspireerd door de mechanische bewegingen van film en de kinetische energie van de stad, evolueert mijn praktijk naar een studie over hoe digitale data gematerialiseerd kan worden.</p>
+                <p>Mijn werk is een voortdurende verkenning van sequenties en "scores". Geïnspireerd door de mechanische bewegingen van film en de kinetische energie van de stad, evolueert mijn praktijk naar een studie over hoe materie gedigitaliseerd wordt.</p>
             </div>
 
             <div class="text-box">
                 <h2>Visuele Frequenties</h2>
-                <p>Met behulp van software zoals Director en Vectorworks ontwikkel ik animaties waarin figuren bewegen volgens specifieke frequenties. Deze digitale "clusters" worden getransformeerd tot fysieke objecten.</p>
+                <p>Met behulp van software zoals Director en Vectorworks ontwikkel ik animaties waarin figuren bewegen volgens specifieke frequenties. Deze digitale "clusters" worden via stills getransformeerd tot fysieke objecten.</p>
             </div>
 
         </div>
