--- a/work.html
+++ b/work.html
@@ -122,7 +122,7 @@
         </a>
 
         <a href="#" class="work-item">
-            <div class="work-image" style="display:flex; align-items:center; justify-content:center; color:#ccc;">[Image Placeholder]</div>
+            <img src="images/1.mov" alt="picture" class="work-image">
             <div class="work-info">
                 <h3>Kinetic Energy</h3>
                 <p>Animation & Vectorworks studies</p>
