Replace image with video for work item
Replaced image with a video element for better media display.

--- a/work.html
+++ b/work.html
@@ -122,7 +122,10 @@
         </a>
 
         <a href="#" class="work-item">
-            <img src="images/1.mov" alt="picture" class="work-image">
+           <video width="640" height="360" controls>
+  <source src="1.mov" type="video/quicktime">
+  Je browser ondersteunt de video tag niet.
+</video>
             <div class="work-info">
                 <h3>Kinetic Energy</h3>
                 <p>Animation & Vectorworks studies</p>
