--- a/work.html
+++ b/work.html
@@ -123,7 +123,7 @@
 
         <a href="#" class="work-item">
            <video width="640" height="360" controls>
-  <source src="1.mov" type="video/quicktime">
+  <source src="videos/1.mp4" type="video/quicktime">
   Je browser ondersteunt de video tag niet.
 </video>
             <div class="work-info">
