--- a/work2.html
+++ b/work2.html
@@ -74,8 +74,8 @@
 
     <div class="work-grid">
         <figure>
-            <a href="images/rebus.jpg" target="_blank" class="media-link">
-                <img src="images/rebus.jpg" alt="Rebus" class="media-item">
+            <a href="images/lang.jpg" target="_blank" class="media-link">
+                <img src="images/lang.jpg" alt="Rebus" class="media-item">
             </a>
             <figcaption>metal sculpturen</figcaption>
         </figure> 
